# billionaires-SDK

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  DEVELOPMENT_MEMORY.md  LICENSE  README.md  pyproject.toml
billionaires_sdk/: __init__.py  client.py
examples/: async_order.py  basic_order.py  basket_order.py  sma_crossover.py
proalgotrade/: __init__.py  client.py
tests/: test_client.py
