[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "billionaires-sdk"
version = "1.0.0"
description = "Billionaires SDK for sending strategy signals to Billionaires Terminal and supported white-label platforms"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Billionaires Technologies" }
]
license = { text = "Proprietary" }
keywords = ["billionaires", "bridge api", "trading", "tradingview", "algo trading", "algoadmin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
include = ["billionaires_sdk*"]
